fix: fix collision and ai, now enemy not stuck in wall and can make path if player near wall